[package]
name = "bevy_replicon_matchbox"
version = "0.16.1"
authors = ["Roger Kueng <rogerkueng@gmail.com>"]
edition = "2024"
description = "A matchbox backend for replicon, built for Bevy"
readme = "README.md"
repository = "https://github.com/occuros/bevy_replicon_matchbox.git"
keywords = [
  "bevy",
  "multiplayer",
  "replication",
  "server-authoritative",
  "replicon",
]
categories = ["game-development", "network-programming"]
license = "MIT OR Apache-2.0"
include = ["/src", "/tests", "/examples", "LICENSE*"]


[dependencies]
bevy = { version = "0.17", default-features = false, features = ["bevy_log"] }
bevy_replicon = { version = "0.34", default-features = false }
bevy_matchbox = "0.12"
serde = { version = "1.0", features = ["serde_derive"] }
bytes = "1.10"

[dev-dependencies]
bevy = { version = "0.17", default-features = false, features = [
  "bevy_gizmos",
  "bevy_state",
  "bevy_text",
  "bevy_ui_picking_backend",
  "bevy_ui",
  "bevy_window",
  "default_font",
  "serialize",
  "x11",
] }
bevy_matchbox = { version = "0.12.0", features = ["signaling"] }
test-log = "0.2"
serde = "1.0"
clap = { version = "4.1", features = ["derive"] }

[features]
default = ["client", "server"]
server = ["bevy_replicon/server"]
client = ["bevy_replicon/client"]
signaling = ["bevy_matchbox/signaling"]


[[test]]
name = "backend"
required-features = ["server", "client"]

[[example]]
name = "simple_box"
required-features = ["server", "client"]

[[example]]
name = "tic_tac_toe"
required-features = ["server", "client"]
